update minor CSS

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
         background-image: url('../images/DOC-Sign-Up-background.png');
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: center;
+        background-position: right;
         height: 753px;
         padding: 20px 30px;
         width:100%;
