--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,7 @@
         border: none;
         border-radius:4px;                
         height: 40px;
-        margin-bottom: 15px;
+        /* margin-bottom: 15px; */
         text-indent: 15px;
         width: 100%;
     }
@@ -195,7 +195,7 @@
         float: right;
         height: 15px;
         margin-right: 10px;
-        margin-top: -40px;
+        margin-top: -25px;
         position: relative;
         width: 20px;
         z-index: 2;
@@ -208,10 +208,17 @@
         float: right;
         height: 15px;
         margin-right: 10px;
-        margin-top: -40px;
+        margin-top: -25px;
         position: relative;
         width: 20px;
         z-index: 2;
+    }
+
+    .error-textfield{
+        color:#ff0000;
+        font-size:12px;
+        margin-bottom:15px;
+        margin-top: 5px;
     }
 
     /* .password-visible-icon svg{
